tests/mm0_mmu/fail/bad-sort413.mmu
-- bad modifier order
(sort s413 free pure provable)